[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/gameplay/levels/level_manager.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/tower-defense-top-down/spritesheet/tower-defense_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://scenes/enemy_wave/enemy_wave.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/enemy-commander/enemy-commander.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enemy-call-button/enemy-call-button.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/strategic-point.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/gameplay/hit-area/hit-area.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/enemy_wave/enemy_group.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/enemy_wave/enemy_waves_manager.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/fx/CoinParticles.tscn" type="PackedScene" id=10]

[sub_resource type="TileSet" id=1]
0/name = "tower-defense_spritesheet.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 960, 768 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 281.489, 73.2769, 0, 0, 0, 0, 268.019, 674.917, 0, 0, 0, 0, 600.268, 661.447, 0, 0, 0, 0, 613.738, 297.769, 0, 0, 0, 0, 802.311, 293.279, 0, 0, 0, 0, 793.332, 661.447, 0, 0, 0, 0, 1112.11, 656.957, 0, 0, 0, 0, 1125.58, 113.685 )
}

[node name="level4" type="Node2D" groups=[
"Levels",
]]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 65542, 1, 0, 65542, 2, 0, 65542, 3, 0, 65542, 4, 0, 65542, 5, 0, 65542, 6, 0, 65542, 7, 0, 65542, 8, 0, 65542, 9, 0, 65542, 10, 0, 65542, 11, 0, 65542, 12, 0, 65542, 13, 0, 65542, 14, 0, 65542, 15, 0, 65542, 16, 0, 65542, 17, 0, 65542, 18, 0, 65542, 19, 0, 65542, 20, 0, 65542, 21, 0, 65542, 22, 0, 65542, 23, 0, 65542, 24, 0, 65542, 65536, 0, 65542, 65537, 0, 65542, 65538, 0, 65542, 65539, 0, 65542, 65540, 0, 65542, 65541, 0, 65542, 65542, 0, 65542, 65543, 0, 65542, 65544, 0, 65542, 65545, 0, 65542, 65546, 0, 65542, 65547, 0, 65542, 65548, 0, 65542, 65549, 0, 65542, 65550, 0, 65542, 65551, 0, 65542, 65552, 0, 65542, 65553, 0, 65542, 65554, 0, 65542, 65555, 0, 65542, 65556, 0, 65542, 65557, 0, 65542, 65558, 0, 65542, 65559, 0, 65542, 65560, 0, 65542, 131072, 0, 65542, 131073, 0, 65542, 131074, 0, 65542, 131075, 0, 65542, 131076, 0, 65542, 131077, 0, 65542, 131078, 0, 65542, 131079, 0, 65542, 131080, 0, 65542, 131081, 0, 65542, 131082, 0, 65542, 131083, 0, 65542, 131084, 0, 65542, 131085, 0, 65542, 131086, 0, 65542, 131087, 0, 65542, 131088, 0, 65542, 131089, 0, 65542, 131090, 0, 65542, 131091, 0, 65542, 131092, 0, 65542, 131093, 0, 65542, 131094, 0, 65542, 131095, 0, 65542, 131096, 0, 65542, 196608, 0, 65542, 196609, 0, 65542, 196610, 0, 65542, 196611, 0, 65542, 196612, 0, 65542, 196613, 0, 65542, 196614, 0, 65542, 196615, 0, 65542, 196616, 0, 65542, 196617, 0, 65542, 196618, 0, 65542, 196619, 0, 65542, 196620, 0, 65542, 196621, 0, 65542, 196622, 0, 65542, 196623, 0, 65542, 196624, 0, 65542, 196625, 0, 65542, 196626, 0, 65542, 196627, 0, 65542, 196628, 0, 65542, 196629, 0, 65542, 196630, 0, 65542, 196631, 0, 65542, 196632, 0, 65542, 262144, 0, 65542, 262145, 0, 65542, 262146, 0, 65542, 262147, 0, 65542, 262148, 0, 65542, 262149, 0, 65542, 262150, 0, 65542, 262151, 0, 65542, 262152, 0, 65542, 262153, 0, 65542, 262154, 0, 65542, 262155, 0, 65542, 262156, 0, 65542, 262157, 0, 65542, 262158, 0, 65542, 262159, 0, 65542, 262160, 0, 65542, 262161, 0, 65542, 262162, 0, 65542, 262163, 0, 65542, 262164, 0, 65542, 262165, 0, 65542, 262166, 0, 65542, 262167, 0, 65542, 262168, 0, 65542, 327680, 0, 65542, 327681, 0, 65542, 327682, 0, 65542, 327683, 0, 65542, 327684, 0, 65542, 327685, 0, 65542, 327686, 0, 65542, 327687, 0, 65542, 327688, 0, 65542, 327689, 0, 65542, 327690, 0, 65542, 327691, 0, 65542, 327692, 0, 65542, 327693, 0, 65542, 327694, 0, 65542, 327695, 0, 65542, 327696, 0, 65542, 327697, 0, 65542, 327698, 0, 65542, 327699, 0, 65542, 327700, 0, 65542, 327701, 0, 65542, 327702, 0, 65542, 327703, 0, 65542, 327704, 0, 65542, 393216, 0, 65542, 393217, 0, 65542, 393218, 0, 65542, 393219, 0, 65542, 393220, 0, 65542, 393221, 0, 65542, 393222, 0, 65542, 393223, 0, 65542, 393224, 0, 65542, 393225, 0, 65542, 393226, 0, 65542, 393227, 0, 65542, 393228, 0, 65542, 393229, 0, 65542, 393230, 0, 65542, 393231, 0, 65542, 393232, 0, 65542, 393233, 0, 65542, 393234, 0, 65542, 393235, 0, 65542, 393236, 0, 65542, 393237, 0, 65542, 393238, 0, 65542, 393239, 0, 65542, 393240, 0, 65542, 458752, 0, 65542, 458753, 0, 65542, 458754, 0, 65542, 458755, 0, 65542, 458756, 0, 65542, 458757, 0, 65542, 458758, 0, 65542, 458759, 0, 65542, 458760, 0, 65542, 458761, 0, 65542, 458762, 0, 65542, 458763, 0, 65542, 458764, 0, 65542, 458765, 0, 65542, 458766, 0, 65542, 458767, 0, 65542, 458768, 0, 65542, 458769, 0, 65542, 458770, 0, 65542, 458771, 0, 65542, 458772, 0, 65542, 458773, 0, 65542, 458774, 0, 65542, 458775, 0, 65542, 458776, 0, 65542, 524288, 0, 65542, 524289, 0, 65542, 524290, 0, 65542, 524291, 0, 65542, 524292, 0, 65542, 524293, 0, 65542, 524294, 0, 65542, 524295, 0, 65542, 524296, 0, 65542, 524297, 0, 65542, 524298, 0, 65542, 524299, 0, 65542, 524300, 0, 65542, 524301, 0, 65542, 524302, 0, 65542, 524303, 0, 65542, 524304, 0, 65542, 524305, 0, 65542, 524306, 0, 65542, 524307, 0, 65542, 524308, 0, 65542, 524309, 0, 65542, 524310, 0, 65542, 524311, 0, 65542, 524312, 0, 65542, 589824, 0, 65542, 589825, 0, 65542, 589826, 0, 65542, 589827, 0, 65542, 589828, 0, 65542, 589829, 0, 65542, 589830, 0, 65542, 589831, 0, 65542, 589832, 0, 65542, 589833, 0, 65542, 589834, 0, 65542, 589835, 0, 65542, 589836, 0, 65542, 589837, 0, 65542, 589838, 0, 65542, 589839, 0, 65542, 589840, 0, 65542, 589841, 0, 65542, 589842, 0, 65542, 589843, 0, 65542, 589844, 0, 65542, 589845, 0, 65542, 589846, 0, 65542, 589847, 0, 65542, 589848, 0, 65542, 655360, 0, 65542, 655361, 0, 65542, 655362, 0, 65542, 655363, 0, 65542, 655364, 0, 65542, 655365, 0, 65542, 655366, 0, 65542, 655367, 0, 65542, 655368, 0, 65542, 655369, 0, 65542, 655370, 0, 65542, 655371, 0, 65542, 655372, 0, 65542, 655373, 0, 65542, 655374, 0, 65542, 655375, 0, 65542, 655376, 0, 65542, 655377, 0, 65542, 655378, 0, 65542, 655379, 0, 65542, 655380, 0, 65542, 655381, 0, 65542, 655382, 0, 65542, 655383, 0, 65542, 655384, 0, 65542, 720896, 0, 65542, 720897, 0, 65542, 720898, 0, 65542, 720899, 0, 65542, 720900, 0, 65542, 720901, 0, 65542, 720902, 0, 65542, 720903, 0, 65542, 720904, 0, 65542, 720905, 0, 65542, 720906, 0, 65542, 720907, 0, 65542, 720908, 0, 65542, 720909, 0, 65542, 720910, 0, 65542, 720911, 0, 65542, 720912, 0, 65542, 720913, 0, 65542, 720914, 0, 65542, 720915, 0, 65542, 720916, 0, 65542, 720917, 0, 65542, 720918, 0, 65542, 720919, 0, 65542, 720920, 0, 65542, 786432, 0, 65542, 786433, 0, 65542, 786434, 0, 65542, 786435, 0, 65542, 786436, 0, 65542, 786437, 0, 65542, 786438, 0, 65542, 786439, 0, 65542, 786440, 0, 65542, 786441, 0, 65542, 786442, 0, 65542, 786443, 0, 65542, 786444, 0, 65542, 786445, 0, 65542, 786446, 0, 65542, 786447, 0, 65542, 786448, 0, 65542, 786449, 0, 65542, 786450, 0, 65542, 786451, 0, 65542, 786452, 0, 65542, 786453, 0, 65542, 786454, 0, 65542, 786455, 0, 65542, 786456, 0, 65542, 851968, 0, 65542, 851969, 0, 65542, 851970, 0, 65542, 851971, 0, 65542, 851972, 0, 65542, 851973, 0, 65542, 851974, 0, 65542, 851975, 0, 65542, 851976, 0, 65542, 851977, 0, 65542, 851978, 0, 65542, 851979, 0, 65542, 851980, 0, 65542, 851981, 0, 65542, 851982, 0, 65542, 851983, 0, 65542, 851984, 0, 65542, 851985, 0, 65542, 851986, 0, 65542, 851987, 0, 65542, 851988, 0, 65542, 851989, 0, 65542, 851990, 0, 65542, 851991, 0, 65542, 851992, 0, 65542 )
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyCommander" parent="." instance=ExtResource( 4 )]
wave_manager_path = NodePath("../WaveManager")
call_button_path = NodePath("../EnemyCallButton")

[node name="WaveManager" parent="." instance=ExtResource( 9 )]

[node name="EnemyWave" parent="WaveManager" instance=ExtResource( 3 )]

[node name="EnemyGroup" parent="WaveManager/EnemyWave" instance=ExtResource( 8 )]
num_of_enemies = 3

[node name="HitArea" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( -85.5978, 0 )
scale = Vector2( 1.31937, 1 )
curve = SubResource( 2 )

[node name="SpawnPoint" type="Position2D" parent="."]

[node name="EnemyCallButton" parent="." instance=ExtResource( 5 )]
position = Vector2( 220.617, 362.039 )

[node name="StrategicPoint" parent="." instance=ExtResource( 6 )]
position = Vector2( 448.204, 528.337 )

[node name="StrategicPoint2" parent="." instance=ExtResource( 6 )]
position = Vector2( 1171.07, 501.398 )

[node name="Details" type="Node2D" parent="."]

[node name="Particles2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 0, 0 )
[connection signal="last_enemy_in_actual_wave_spawned" from="WaveManager" to="." method="_on_WaveManager_last_enemy_in_actual_wave_spawned"]
[connection signal="last_enemy_spawned" from="WaveManager" to="." method="_on_WaveManager_last_enemy_spawned"]
[connection signal="last_wave" from="WaveManager" to="." method="_on_WaveManager_last_wave"]
[connection signal="spawn_enemy" from="WaveManager" to="." method="_on_WaveManager_spawn_enemy"]
